--- a/Essentials/src/messages.properties
+++ b/Essentials/src/messages.properties
@@ -151,8 +151,8 @@ helpLine=\u00a76/{0}\u00a7r\: {1}
 helpMatching=\u00a76Commands matching "\u00a7c{0}\u00a76"\:
 helpOp=\u00a74[HelpOp]\u00a7r \u00a76{0}\:\u00a7r {1}
 helpPlugin=\u00a74{0}\u00a7r\: Plugin Help\: /help {1}
-holdBook=\u00a7cUnraveledMC -> \u00a7cYou are not holding a writable book.
-holdFirework=\u00a7cUnraveledMC -> \u00a7cYou must be holding a firework to add effects.
+holdBook=\u00a7cYou are not holding a writable book.
+holdFirework=\u00a7cYou must be holding a firework to add effects.
 holdPotion=\u00a74You must be holding a potion to apply effects to it.
 holeInFloor=\u00a74Hole in floor\!
 homeSet=\u00a7cUnraveledMC -> \u00a7cHome set to current location.
